--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header>
           <!-- Div que contiene la cabecera-->
           <div class="cabecera">
-            <img src="img/logo.png" alt="Imagen de cabecera" ><h2>REAL PASIÓN FUTBOL CLUB</h2>
+            <center><h2>REAL PASIÓN <img src="img/logo.png" alt="Imagen de cabecera" > FUTBOL CLUB</h2></center>
           </div>
         </header>
 
@@ -61,7 +61,7 @@
 
                   <!-- Bienvenido-->
                   <div class="bienvenido">
-                    <img src="img/plantilla/CARRUSEL.8.jpg" alt="Imagen de bienvenida" title="Imagen de cabecera">
+                    <img src="img/CARRUSEL.1.jpg" alt="Imagen" title="Imagen de cabecera" height="400px">
                       <div class="info-bienvenido">
                           <h4>"DA TU 100% Y CUMPLIRAS TUS METAS"</h4>
                       </div>
@@ -72,7 +72,7 @@
 
                     <!-- Próxima entrevista-->
                     <div class="num-entrevista">
-                      <img class="left" src="img/plantilla/fotos 1.jpg" alt="Interrogación" title="Interrogación">
+                      <img class="left" src="img/fotos 1.jpg" alt="Interrogación" title="Interrogación">
                       <h4>HISTORIA</h4>
                       <p>Fue creado el 21 de marzo de 2015. Todas parecían adultas. Jugaban bien. Disputaban el balón 
                         sin miedo. Pero había una que resaltaba. No solo era la más alta del escenario, sino que tenía
@@ -81,7 +81,7 @@
 
                     <!-- Entrevista 1-->
                     <div class="num-entrevista">
-                      <img class="left" src="img/plantilla/fotos 2.jpg" alt="Isco" title="Isco">
+                      <img class="left" src="img/fotos 2.jpg" alt="Isco" title="Isco">
                       <h4>EVENTOS</h4>
                       <p>VIE, 6 MAY. 2016 Primer Octagonal De Futbol Femenino Funza.No solo era la más alta del escenario, sino que tenía
                         capacidades excepcionales, superiores.</p>
@@ -89,7 +89,7 @@
 
                     <!-- Entrevista 2 -->
                     <div class="num-entrevista">
-                      <img class="left" src="img/plantilla/fotos 3.jpg" alt="Sergio Ramos" title="Sergio Ramos">
+                      <img class="left" src="img/fotos 3.jpg" alt="Sergio Ramos" title="Sergio Ramos">
                       <h4>VISITAS</h4>
                         <p>VIE, 6 MAY. 2016 Primer Octagonal De Futbol Femenino Funza.No solo era la más alta del 
                           escenario, sino que tenía capacidades excepcionales, superiores.</p>                      
