--- a/socio.html
+++ b/socio.html
@@ -24,12 +24,12 @@
     <!-- Div que contiene la página principal-->
     <div class="contenedor">
 
-        <header>
-          <!-- Div que contiene la cabecera-->
-          <div class="cabecera">
-            <img src="img/logo.png" alt="Imagen de cabecera" >
-          </div>
-        </header>
+      <header>
+        <!-- Div que contiene la cabecera-->
+        <div class="cabecera">
+          <center><h2>REAL PASIÓN <img src="img/logo.png" alt="Imagen de cabecera" > FUTBOL CLUB</h2></center>
+        </div>
+      </header>
 
         <!-- Sección 1 -->
         <section id="seccion1" >
